@@ -1,3 +1,14 @@
+2010-02-05  Ryan Leavengood  <leavengood@gmail.com>
+
+        Reviewed by David Levin.
+
+        Implementation of GlyphPage::fill() for Haiku port.
+        https://bugs.webkit.org/show_bug.cgi?id=34527
+
+        Covered by existing tests.
+
+        * platform/graphics/haiku/GlyphPageTreeNodeHaiku.cpp
+
 2010-01-19  Kenneth Rohde Christiansen  <kenneth@webkit.org>
 
         Reviewed by Dave Hyatt.
